# rules_go

./: README.rst
docs/: BUILD.bazel  doc_helpers.bzl  rule_body.vm  rule_subsection.vm
docs/footers/: core_docs.md  embed_data.md
docs/go/core/: BUILD.bazel  core.bzl  rules.md
docs/go/extras/: extras.bzl  extras.md
docs/go_core/: cross_compilation.txt  examples.txt  links.txt  platform-specific_dependencies.txt
docs/proto/core/: links.txt
extras/: embed_data.bzl
go/: BUILD.bazel  core.md  core.rst  core_docs.bzl  crosstool.rst  def.bzl  dependencies.rst  extras.md  mode_docs.bzl  modes.md  modes.rst  nogo.rst  providers.rst
go/private/: BUILD.bazel  mode.bzl
go/private/rules/: BUILD.bazel  binary.bzl  library.bzl  source.bzl  test.bzl  wrappers.bzl
go/private/tools/: path.bzl
proto/: BUILD.bazel  core_docs.bzl  def.bzl
tests/core/c_linkmodes/: README.rst
tests/core/cross/: README.rst
tests/core/go_binary/: README.rst
tests/core/go_library/: README.rst
tests/core/go_path/: README.rst
tests/core/go_plugin/: README.rst
tests/core/go_proto_library/: README.rst
tests/core/go_test/: README.rst
tests/core/importmap/: README.rst
tests/core/nogo/config/: README.rst
tests/core/nogo/custom/: README.rst
tests/core/nogo/vet/: README.rst
tests/core/transition/: README.rst
tests/examples/executable_name/: README.rst
